# SCRIBE

./: .gitignore  LICENSE  README.md  pyproject.toml
cases/binutils/: test-all.sh
cases/binutils/CVE-2020-16590/: Dockerfile  c_patch.py  crash.sh  llm_patched.c  src_patch.diff
cases/binutils/CVE-2020-16591/: Dockerfile  crash.sh  llm_patched.c  manual_patched.c  patched.sh  src_patch.diff
cases/binutils/CVE-2020-16592/: Dockerfile  c_patch.py  crash.sh  llm_patched.c  manual_patched.c  patched.sh  src_patch.diff
cases/binutils/CVE-2020-16593/: Dockerfile  c_patch.py  crash.sh  llm_patched.c  manual_patched.c  patched.sh  (+2 more)
cases/coreutils/: test-all.sh
datasets/binutils/: build.Dockerfile  build.sh  export.Dockerfile
datasets/cgc-challenges/: build.Dockerfile  build.sh  export.Dockerfile  export_with_symbol.Dockerfile
datasets/coreutils/: build.Dockerfile  build.sh  export.Dockerfile  export_with_symbol.Dockerfile
docker/: .env.example  README.md  base.Dockerfile  build.sh  docker-compose.yaml
recompiler/: README.md  build.sh  clang-15.diff
recompiler/src/: CMakeLists.txt
recompiler/src/Misc/: Misc.cpp  StackToReg.cpp
recompiler/src/Passes/: CMakeLists.txt
recompiler/src/Passes/include/: ParseCmdOpts.h
recompiler/src/Passes/src/: .CustomPEI.cpp  FixCallingConv.cpp  ForceDSOLocal.cpp  IndirectBrachTracking.cpp  InsertInlineAsm.cpp  LocalVariableToArg.cpp  ParseCmdOpts.cpp  StackCanary.cpp  StackLayout.cpp  UpdatedPrologEpilogInserter.cpp  UpdatedPrologEpilogInserter.old.1.cpp
recompiler/src/Plugins/: CMakeLists.txt
recompiler/src/Plugins/src/: CorrectBoolType.cpp  RegExprToInlineAsm.cpp
scripts/: README.md  decompile_func.py  dump_asm_and_decomp.py  llm_patch.py
src/scribe/: config.py
(+146 files in other folders)
